--- a/messenger/mess.html
+++ b/messenger/mess.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
     <div class="sidebar">
         <div class="sidebar-header">Đoạn chat</div>
-        <input type="text" class="search-bar" placeholder="Tìm kiếm trên Messenger">
+        <input type="text" class="search-bar" placeholder="Tìm kiếm...">
         <div id="chat-list"></div>
     </div>
     <div class="main-chat">
@@ -20,27 +20,15 @@
                 <div class="status">Đang hoạt động</div>
             </div>
         </div>
-        <div class="chat-body" id="chat-body">
-        </div>
+        <div id="chat-body" class="chat-body"></div>
         <div class="chat-footer">
-            <input type="text" placeholder="Aa">
-            <button><img src="https://via.placeholder.com/24" alt="Send"></button>
+            <input type="text" id="message-input" placeholder="Nhập tin nhắn...">
+            <button id="send-button">
+                <img src="../img/send-message.png" alt="Send">
+            </button>
         </div>
     </div>
-    <div class="chat-options">
-        <div class="chat-options-header">
-            <img src="https://via.placeholder.com/40" alt="Avatar">
-            <div>
-                <div class="chat-name">Thằng đệ non</div>
-                <div class="status">Đang hoạt động</div>
-            </div>
-        </div>
-        <div class="option-item">Thông tin về đoạn chat</div>
-        <div class="option-item">Tùy chỉnh đoạn chat</div>
-        <div class="option-item">File phương tiện & file</div>
-        <div class="option-item">File phương tiện</div>
-        <div class="option-item">Quyền riêng tư và hỗ trợ</div>
-    </div>
+   
     <script src="mess.js"></script>
 </body>
 </html>
