--- a/Group/group.html
+++ b/Group/group.html
@@ -12,12 +12,12 @@
         <!-- Header -->
         <header class="header">
             <div class="header-left">
-                 <a href = "../test.html"><img src="../img/logo.png" alt="Facebook Logo" class="logo"></a>
+                 <a href = "../home.html"><img src="../img/logo.png" alt="Facebook Logo" class="logo"></a>
                 <input type="text" placeholder="Tìm kiếm trên Facebook">
             </div>
             <div class="header-center">         
                 <button class="nav-icon">
-                    <a href = "../test.html"><img src="../img/home.png" alt="Home"></a>
+                    <a href = "../home.html"><img src="../img/home.png" alt="Home"></a>
                 </button>
                 <button class="nav-icon">
                     <img src="../img/flag.png" alt="Flag">
