--- a/Group/group_joined.html
+++ b/Group/group_joined.html
@@ -18,11 +18,11 @@
         <header class="header">
             <div class="header-left">
 
-                <a href="../test.html"><img src="../img/logo.png" alt="Facebook Logo" class="logo"></a>
+                <a href="../home.html"><img src="../img/logo.png" alt="Facebook Logo" class="logo"></a>
                 <input type="text" placeholder="Tìm kiếm trên Facebook">
             </div>
             <div class="header-center">
-                <a href="../test.html">
+                <a href="../home.html">
                     <button id="nav-home" class="nav-icon">
                         <img src="../img/home.png" alt="Home">
                     </button>
