--- a/facebook-clone-fe/sign_up.html
+++ b/facebook-clone-fe/sign_up.html
@@ -11,7 +11,7 @@
 <body>
     <div class="register">
         <div class="register__header">
-            <img src="  ./images/facebook.svg" alt="Facebook Logo" class="register__logo">
+            <img src="./images/facebook.svg" alt="Facebook Logo" class="register__logo">
         </div>
         <div class="register__form-container">
             <div class="register-form">
@@ -20,50 +20,125 @@
                     <div class="register-form__subtitle">Nhanh chóng và dễ dàng.</div>
                 </div>
                 <div class="register-form__body">
-                    <form method="POST" id="reg" name="reg" action="../reg" class="register-form__form">
+                    <form method="POST" id="reg" name="reg" class="register-form__form">
                         <div class="register-form__name-group">
                             <input class="register-form__input register-form__input--surname" type="text"
-                                placeholder="Họ" />
+                                id="surname" placeholder="Họ" required />
                             <input class="register-form__input register-form__input--firstname" type="text"
-                                placeholder="Tên" />
+                                id="firstname" placeholder="Tên" required />
                         </div>
                         <div class="register-form__field">
                             <input type="text" class="register-form__input register-form__input--contact"
-                                placeholder="Số điện thoại hoặc email">
+                                id="contact" placeholder="Số điện thoại hoặc email" required>
                         </div>
                         <div class="register-form__field">
                             <input type="password" class="register-form__input register-form__input--password"
-                                placeholder="Mật khẩu mới">
+                                id="password" placeholder="Mật khẩu mới" required>
                         </div>
                         <div class="register-form__label">Sinh nhật</div>
                         <div class="register-form__birthday">
                             <select class="register-form__select register-form__select--day" name="birthday_day"
-                                id="day" title="Ngày">
+                                id="day" title="Ngày" required>
                                 <option value="0">Ngày</option>
-                                <!-- Các option khác giữ nguyên -->
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                                <option value="21">21</option>
+                                <option value="22">22</option>
+                                <option value="23">23</option>
+                                <option value="24">24</option>
+                                <option value="25">25</option>
+                                <option value="26">26</option>
+                                <option value="27">27</option>
+                                <option value="28">28</option>
+                                <option value="29">29</option>
+                                <option value="30">30</option>
+                                <option value="31">31</option>
                             </select>
                             <select class="register-form__select register-form__select--month" name="birthday_month"
-                                id="month">
+                                id="month" required>
                                 <option value="0">Tháng</option>
-                                <!-- Các option khác giữ nguyên -->
+                                <option value="1">Tháng 1</option>
+                                <option value="2">Tháng 2</option>
+                                <option value="3">Tháng 3</option>
+                                <option value="4">Tháng 4</option>
+                                <option value="5">Tháng 5</option>
+                                <option value="6">Tháng 6</option>
+                                <option value="7">Tháng 7</option>
+                                <option value="8">Tháng 8</option>
+                                <option value="9">Tháng 9</option>
+                                <option value="10">Tháng 10</option>
+                                <option value="11">Tháng 11</option>
+                                <option value="12">Tháng 12</option>
                             </select>
                             <select class="register-form__select register-form__select--year" name="birthday_year"
-                                id="year">
+                                id="year" required>
                                 <option value="0">Năm</option>
-                                <!-- Các option khác giữ nguyên -->
+                                <option value="2025">2025</option>
+                                <option value="2024">2024</option>
+                                <option value="2023">2023</option>
+                                <option value="2022">2022</option>
+                                <option value="2021">2021</option>
+                                <option value="2020">2020</option>
+                                <option value="2019">2019</option>
+                                <option value="2018">2018</option>
+                                <option value="2017">2017</option>
+                                <option value="2016">2016</option>
+                                <option value="2015">2015</option>
+                                <option value="2014">2014</option>
+                                <option value="2013">2013</option>
+                                <option value="2012">2012</option>
+                                <option value="2011">2011</option>
+                                <option value="2010">2010</option>
+                                <option value="2009">2009</option>
+                                <option value="2008">2008</option>
+                                <option value="2007">2007</option>
+                                <option value="2006">2006</option>
+                                <option value="2005">2005</option>
+                                <option value="2004">2004</option>
+                                <option value="2003">2003</option>
+                                <option value="2002">2002</option>
+                                <option value="2001">2001</option>
+                                <option value="2000">2000</option>
+                                <option value="1999">1999</option>
+                                <option value="1998">1998</option>
+                                <option value="1997">1997</option>
+                                <option value="1996">1996</option>
+                                <option value="1995">1995</option>
+                                <option value="1994">1994</option>
+                                <option value="1993">1993</option>
+                                <option value="1992">1992</option>
+                                <option value="1991">1991</option>
+                                <option value="1990">1990</option>
                             </select>
                         </div>
                         <div class="register-form__label">Giới tính</div>
                         <span class="register-form__gender-options">
                             <span class="register-form__gender-option">
                                 <label for="nu" class="register-form__gender-label">Nữ</label>
-                                <input type="radio" name="sex" id="nu" value="1" class="register-form__gender-input">
+                                <input type="radio" name="sex" id="nu" value="Female" class="register-form__gender-input" required>
                             </span>
                             <span class="register-form__gender-option">
                                 <label for="nam" class="register-form__gender-label">Nam</label>
-                                <input type="radio" name="sex" id="nam" value="2" class="register-form__gender-input">
+                                <input type="radio" name="sex" id="nam" value="Male" class="register-form__gender-input" required>
                             </span>
-
                         </span>
                         <p class="register-form__terms">
                             Bằng cách nhấp vào Đăng ký, bạn đồng ý với
@@ -77,9 +152,8 @@
                         <center>
                             <button type="submit" class="register-form__submit">Đăng ký</button>
                             <div class="register-form__login-link">
-                                <a href="./sign_in.html" aria-label="Bạn đã có tài khoản ư?"
-                                    class="register-form__link">Bạn đã có
-                                    tài khoản ư?</a>
+                                <a href="http://127.0.0.1:5500/front-end/facebook-clone-fe/sign_in.html" aria-label="Bạn đã có tài khoản ư?"
+                                    class="register-form__link">Bạn đã có tài khoản ư?</a>
                             </div>
                         </center>
                     </form>
@@ -100,7 +174,26 @@
                     <ul class="footer__link-list">
                         <li class="footer__link-item"><a href="/r.php" title="Đăng ký Facebook"
                                 class="footer__link">Đăng ký</a></li>
-                        <!-- Các li khác giữ nguyên -->
+                        <li class="footer__link-item"><a href="http://127.0.0.1:5500/front-end/facebook-clone-fe/sign_in.html" title="Đăng nhập Facebook"
+                                class="footer__link">Đăng nhập</a></li>
+                        <li class="footer__link-item"><a href="/messsages" title="Xem Messenger"
+                                class="footer__link">Messenger</a></li>
+                        <li class="footer__link-item"><a href="/jobs" title="Xem việc làm" class="footer__link">Việc
+                                làm</a></li>
+                        <li class="footer__link-item"><a href="/about" title="Xem giới thiệu"
+                                class="footer__link">Giới thiệu</a></li>
+                        <li class="footer__link-item"><a href="/developers" title="Xem nhà phát triển"
+                                class="footer__link">Nhà phát triển</a></li>
+                        <li class="footer__link-item"><a href="/careers" title="Xem tuyển dụng"
+                                class="footer__link">Tuyển dụng</a></li>
+                        <li class="footer__link-item"><a href="/privacy" title="Xem quyền riêng tư"
+                                class="footer__link">Quyền riêng tư</a></li>
+                        <li class="footer__link-item"><a href="/policies" title="Xem điều khoản"
+                                class="footer__link">Điều khoản</a></li>
+                        <li class="footer__link-item"><a href="/policies/cookies" title="Xem điều khoản Cookie"
+                                class="footer__link">Cookie</a></li>
+                        <li class="footer__link-item"><a href="/help" title="Giải đáp"
+                                class="footer__link">Giải đáp</a></li>
                     </ul>
                 </div>
                 <div class="footer__copyright">
@@ -109,10 +202,71 @@
             </div>
         </div>
     </div>
+
     <script>
-        function showCustom() {
-            document.getElementById("customouter").style.display = "block";
-        }
+        // Hàm xử lý submit form đăng ký
+        document.getElementById('reg').addEventListener('submit', async (event) => {
+            event.preventDefault(); // Ngăn chặn submit mặc định
+
+            const surname = document.getElementById('surname').value.trim();
+            const firstname = document.getElementById('firstname').value.trim();
+            const contact = document.getElementById('contact').value.trim();
+            const password = document.getElementById('password').value.trim();
+            const day = document.getElementById('day').value;
+            const month = document.getElementById('month').value;
+            const year = document.getElementById('year').value;
+            const sex = document.querySelector('input[name="sex"]:checked')?.value;
+
+            // Kiểm tra dữ liệu đầu vào
+            if (!surname || !firstname || !contact || !password) {
+                alert('Vui lòng nhập đầy đủ họ, tên, email/số điện thoại và mật khẩu.');
+                return;
+            }
+            if (day === '0' || month === '0' || year === '0') {
+                alert('Vui lòng chọn ngày sinh hợp lệ.');
+                return;
+            }
+            if (!sex) {
+                alert('Vui lòng chọn giới tính.');
+                return;
+            }
+
+            // Định dạng ngày sinh thành chuỗi YYYY-MM-DD
+            const birthDay = `${year}-${month.padStart(2, '0')}-${day.padStart(2, '0')}`;
+
+            const registerData = {
+                username: contact,
+                password: password,
+                firstName: firstname,
+                lastName: surname,
+                sex: sex,
+                birthDay: birthDay
+            };
+
+            try {
+                const response = await fetch('http://localhost:8080/api/auth/register', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(registerData)
+                });
+
+                if (!response.ok) {
+                    const errorData = await response.json();
+                    throw new Error(errorData.message || 'Đăng ký thất bại');
+                }
+
+                const result = await response.json();
+                console.log('Đăng ký thành công:', result);
+                alert('Đăng ký thành công! Vui lòng đăng nhập.');
+                // Chuyển hướng đến trang đăng nhập
+                window.location.href = 'http://127.0.0.1:5500/front-end/facebook-clone-fe/sign_in.html';
+            } catch (error) {
+                console.error('Lỗi đăng ký:', error);
+                alert(error.message || 'Đã có lỗi xảy ra. Vui lòng thử lại.');
+            }
+        });
     </script>
 </body>
 
