--- a/facebook-clone-fe/sign_up.html
+++ b/facebook-clone-fe/sign_up.html
@@ -20,20 +20,20 @@
                     <div class="register-form__subtitle">Nhanh chóng và dễ dàng.</div>
                 </div>
                 <div class="register-form__body">
-                    <form method="POST" id="reg" name="reg" class="register-form__form">
+                    <form method="POST" id="reg" name="reg" action="../reg" class="register-form__form">
                         <div class="register-form__name-group">
                             <input class="register-form__input register-form__input--surname" type="text"
-                                id="surname" placeholder="Họ" required />
+                                placeholder="Họ" name="lastName" />
                             <input class="register-form__input register-form__input--firstname" type="text"
-                                id="firstname" placeholder="Tên" required />
+                                placeholder="Tên" name="firstName" />
                         </div>
                         <div class="register-form__field">
                             <input type="text" class="register-form__input register-form__input--contact"
-                                id="contact" placeholder="Số điện thoại hoặc email" required>
+                                placeholder="Số điện thoại hoặc email" name="username">
                         </div>
                         <div class="register-form__field">
                             <input type="password" class="register-form__input register-form__input--password"
-                                id="password" placeholder="Mật khẩu mới" required>
+                                placeholder="Mật khẩu mới" name="password">
                         </div>
                         <div class="register-form__label">Sinh nhật</div>
                         <div class="register-form__birthday">
@@ -127,17 +127,109 @@
                                 <option value="1992">1992</option>
                                 <option value="1991">1991</option>
                                 <option value="1990">1990</option>
+                                <option value="1989">1989</option>
+                                <option value="1988">1988</option>
+                                <option value="1987">1987</option>
+                                <option value="1986">1986</option>
+                                <option value="1985">1985</option>
+                                <option value="1984">1984</option>
+                                <option value="1983">1983</option>
+                                <option value="1982">1982</option>
+                                <option value="1981">1981</option>
+                                <option value="1980">1980</option>
+                                <option value="1979">1979</option>
+                                <option value="1978">1978</option>
+                                <option value="1977">1977</option>
+                                <option value="1976">1976</option>
+                                <option value="1975">1975</option>
+                                <option value="1974">1974</option>
+                                <option value="1973">1973</option>
+                                <option value="1972">1972</option>
+                                <option value="1971">1971</option>
+                                <option value="1970">1970</option>
+                                <option value="1969">1969</option>
+                                <option value="1968">1968</option>
+                                <option value="1967">1967</option>
+                                <option value="1966">1966</option>
+                                <option value="1965">1965</option>
+                                <option value="1964">1964</option>
+                                <option value="1963">1963</option>
+                                <option value="1962">1962</option>
+                                <option value="1961">1961</option>
+                                <option value="1960">1960</option>
+                                <option value="1959">1959</option>
+                                <option value="1958">1958</option>
+                                <option value="1957">1957</option>
+                                <option value="1956">1956</option>
+                                <option value="1955">1955</option>
+                                <option value="1954">1954</option>
+                                <option value="1953">1953</option>
+                                <option value="1952">1952</option>
+                                <option value="1951">1951</option>
+                                <option value="1950">1950</option>
+                                <option value="1949">1949</option>
+                                <option value="1948">1948</option>
+                                <option value="1947">1947</option>
+                                <option value="1946">1946</option>
+                                <option value="1945">1945</option>
+                                <option value="1944">1944</option>
+                                <option value="1943">1943</option>
+                                <option value="1942">1942</option>
+                                <option value="1941">1941</option>
+                                <option value="1940">1940</option>
+                                <option value="1939">1939</option>
+                                <option value="1938">1938</option>
+                                <option value="1937">1937</option>
+                                <option value="1936">1936</option>
+                                <option value="1935">1935</option>
+                                <option value="1934">1934</option>
+                                <option value="1933">1933</option>
+                                <option value="1932">1932</option>
+                                <option value="1931">1931</option>
+                                <option value="1930">1930</option>
+                                <option value="1929">1929</option>
+                                <option value="1928">1928</option>
+                                <option value="1927">1927</option>
+                                <option value="1926">1926</option>
+                                <option value="1925">1925</option>
+                                <option value="1924">1924</option>
+                                <option value="1923">1923</option>
+                                <option value="1922">1922</option>
+                                <option value="1921">1921</option>
+                                <option value="1920">1920</option>
+                                <option value="1919">1919</option>
+                                <option value="1918">1918</option>
+                                <option value="1917">1917</option>
+                                <option value="1916">1916</option>
+                                <option value="1915">1915</option>
+                                <option value="1914">1914</option>
+                                <option value="1913">1913</option>
+                                <option value="1912">1912</option>
+                                <option value="1911">1911</option>
+                                <option value="1910">1910</option>
+                                <option value="1909">1909</option>
+                                <option value="1908">1908</option>
+                                <option value="1907">1907</option>
+                                <option value="1906">1906</option>
+                                <option value="1905">1905</option>
+                                <option value="1904">1904</option>
+                                <option value="1903">1903</option>
+                                <option value="1902">1902</option>
+                                <option value="1901">1901</option>
+                                <option value="1900">1900</option>
                             </select>
                         </div>
                         <div class="register-form__label">Giới tính</div>
                         <span class="register-form__gender-options">
                             <span class="register-form__gender-option">
                                 <label for="nu" class="register-form__gender-label">Nữ</label>
-                                <input type="radio" name="sex" id="nu" value="Female" class="register-form__gender-input" required>
+                                <input type="radio" name="sex" id="nu" value="1" class="register-form__gender-input"
+                                    required>
                             </span>
                             <span class="register-form__gender-option">
                                 <label for="nam" class="register-form__gender-label">Nam</label>
-                                <input type="radio" name="sex" id="nam" value="Male" class="register-form__gender-input" required>
+                                <input type="radio" name="sex" id="nam" value="2" class="register-form__gender-input"
+                                    required>
                             </span>
                         </span>
                         <p class="register-form__terms">
@@ -152,7 +244,7 @@
                         <center>
                             <button type="submit" class="register-form__submit">Đăng ký</button>
                             <div class="register-form__login-link">
-                                <a href="http://127.0.0.1:5500/front-end/facebook-clone-fe/sign_in.html" aria-label="Bạn đã có tài khoản ư?"
+                                <a href="./sign_in.html" aria-label="Bạn đã có tài khoản ư?"
                                     class="register-form__link">Bạn đã có tài khoản ư?</a>
                             </div>
                         </center>
@@ -174,26 +266,6 @@
                     <ul class="footer__link-list">
                         <li class="footer__link-item"><a href="/r.php" title="Đăng ký Facebook"
                                 class="footer__link">Đăng ký</a></li>
-                        <li class="footer__link-item"><a href="http://127.0.0.1:5500/front-end/facebook-clone-fe/sign_in.html" title="Đăng nhập Facebook"
-                                class="footer__link">Đăng nhập</a></li>
-                        <li class="footer__link-item"><a href="/messsages" title="Xem Messenger"
-                                class="footer__link">Messenger</a></li>
-                        <li class="footer__link-item"><a href="/jobs" title="Xem việc làm" class="footer__link">Việc
-                                làm</a></li>
-                        <li class="footer__link-item"><a href="/about" title="Xem giới thiệu"
-                                class="footer__link">Giới thiệu</a></li>
-                        <li class="footer__link-item"><a href="/developers" title="Xem nhà phát triển"
-                                class="footer__link">Nhà phát triển</a></li>
-                        <li class="footer__link-item"><a href="/careers" title="Xem tuyển dụng"
-                                class="footer__link">Tuyển dụng</a></li>
-                        <li class="footer__link-item"><a href="/privacy" title="Xem quyền riêng tư"
-                                class="footer__link">Quyền riêng tư</a></li>
-                        <li class="footer__link-item"><a href="/policies" title="Xem điều khoản"
-                                class="footer__link">Điều khoản</a></li>
-                        <li class="footer__link-item"><a href="/policies/cookies" title="Xem điều khoản Cookie"
-                                class="footer__link">Cookie</a></li>
-                        <li class="footer__link-item"><a href="/help" title="Giải đáp"
-                                class="footer__link">Giải đáp</a></li>
                     </ul>
                 </div>
                 <div class="footer__copyright">
@@ -202,71 +274,7 @@
             </div>
         </div>
     </div>
-
-    <script>
-        // Hàm xử lý submit form đăng ký
-        document.getElementById('reg').addEventListener('submit', async (event) => {
-            event.preventDefault(); // Ngăn chặn submit mặc định
-
-            const surname = document.getElementById('surname').value.trim();
-            const firstname = document.getElementById('firstname').value.trim();
-            const contact = document.getElementById('contact').value.trim();
-            const password = document.getElementById('password').value.trim();
-            const day = document.getElementById('day').value;
-            const month = document.getElementById('month').value;
-            const year = document.getElementById('year').value;
-            const sex = document.querySelector('input[name="sex"]:checked')?.value;
-
-            // Kiểm tra dữ liệu đầu vào
-            if (!surname || !firstname || !contact || !password) {
-                alert('Vui lòng nhập đầy đủ họ, tên, email/số điện thoại và mật khẩu.');
-                return;
-            }
-            if (day === '0' || month === '0' || year === '0') {
-                alert('Vui lòng chọn ngày sinh hợp lệ.');
-                return;
-            }
-            if (!sex) {
-                alert('Vui lòng chọn giới tính.');
-                return;
-            }
-
-            // Định dạng ngày sinh thành chuỗi YYYY-MM-DD
-            const birthDay = `${year}-${month.padStart(2, '0')}-${day.padStart(2, '0')}`;
-
-            const registerData = {
-                username: contact,
-                password: password,
-                firstName: firstname,
-                lastName: surname,
-                sex: sex,
-                birthDay: birthDay
-            };
-
-            try {
-                const response = await fetch('http://localhost:8080/api/auth/register', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(registerData)
-                });
-
-                if (!response.ok) {
-                    const errorData = await response.json();
-                    throw new Error(errorData.message || 'Đăng ký thất bại');
-                }
-
-                const result = await response.json();
-                console.log('Đăng ký thành công:', result);
-                alert('Đăng ký thành công! Vui lòng đăng nhập.');
-                // Chuyển hướng đến trang đăng nhập
-                window.location.href = 'http://127.0.0.1:5500/front-end/facebook-clone-fe/sign_in.html';
-            } catch (error) {
-                console.error('Lỗi đăng ký:', error);
-                alert(error.message || 'Đã có lỗi xảy ra. Vui lòng thử lại.');
-            }
-        });
+    <script src="./CallAPI.js">
     </script>
 </body>
 
