get friend list

--- a/Banbe/banbe.html
+++ b/Banbe/banbe.html
@@ -1,22 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook - Bạn bè</title>
     <link rel="stylesheet" href="banbe.css">
 </head>
+
 <body>
     <!-- Header -->
     <header class="header">
         <div class="header-left">
-            <a href = "../home.html"><img src="../img/logo.png" alt="Facebook Logo" class="logo"></a>
+            <a href="../home.html"><img src="../img/logo.png" alt="Facebook Logo" class="logo"></a>
             <input type="text" placeholder="Tìm kiếm trên Facebook">
         </div>
-        <div class="header-center">         
+        <div class="header-center">
             <button class="nav-icon active">
-                <a href = "../home.html"><img src="../img/home.png" alt="Home"></a>
+                <a href="../home.html"><img src="../img/home.png" alt="Home"></a>
             </button>
             <button class="nav-icon">
                 <img src="../img/flag.png" alt="Flag">
@@ -28,13 +29,13 @@
                 <a href="../marketplace/market.html">
                     <img src="../img/marketplace.png" alt="Marketplace">
                 </a>
-                
+
             </button>
-            <a href = "../Group/group.html">
-                     <button id="nav-group" class="nav-icon">
+            <a href="../Group/group.html">
+                <button id="nav-group" class="nav-icon">
                     <img src="../img/group.png" alt="Group">
                 </button>
-               </a>
+            </a>
         </div>
         <div class="header-right">
             <button class="user-icon">
@@ -44,7 +45,7 @@
                 <a href="../messenger/mess.html">
                     <img src="../img/messenger.png" alt="Messenger">
                 </a>
-                
+
             </button>
             <button class="user-icon">
                 <img src="../img/notification.png" alt="Notifications">
@@ -83,10 +84,11 @@
                 </div>
                 <div class="dropdown-item">
                     <span class="icon">🚪</span>
-                    <span><a href = "../facebook-clone-fe/sign_in.html">Đăng xuất</a></span>
+                    <span><a href="../facebook-clone-fe/sign_in.html">Đăng xuất</a></span>
                 </div>
                 <div class="dropdown-footer">
-                    <p>Quyền riêng tư • Điều khoản • Quảng cáo • Lựa chọn quảng cáo • Cookie • Xem thêm • Meta © 2025</p>
+                    <p>Quyền riêng tư • Điều khoản • Quảng cáo • Lựa chọn quảng cáo • Cookie • Xem thêm • Meta © 2025
+                    </p>
                     <p>Phiên bản mới</p>
                 </div>
             </div>
@@ -102,7 +104,7 @@
                 <li><i>🏠</i> Trang chủ</li>
                 <li><i>👥</i> Lời mời kết bạn</li>
                 <li><i>💡</i> Gợi ý</li>
-                <li><i>👤</i> Tất cả bạn bè</li>
+                <li><a href="./TatCaBanBe.html"><i>👤</i> Tất cả bạn bè</a></li>
                 <li><i>🎂</i> Sinh nhật</li>
                 <li><i>📋</i> Danh sách tùy chỉnh</li>
             </ul>
@@ -135,4 +137,5 @@
     </script>
     <script src="banbe.js"></script>
 </body>
+
 </html>
