--- a/facebook-clone-fe/sign_in.html
+++ b/facebook-clone-fe/sign_in.html
@@ -15,7 +15,8 @@
                 <div class="login__logo-container">
                     <img class="login__logo" src="./images/facebook.svg" alt="Facebook">
                 </div>
-                <h2 class="login__slogan">Facebook Clone giúp bạn kết nối và chia sẻ với mọi người trong cuộc sống của bạn.
+                <h2 class="login__slogan">Facebook Clone giúp bạn kết nối và chia sẻ với mọi người trong cuộc sống của
+                    bạn.
                 </h2>
             </div>
             <div class="login__right">
@@ -129,9 +130,9 @@
                 // Lưu accessToken vào localStorage
                 localStorage.setItem('accessToken', result.accessToken);
                 // console.log('Đăng nhập thành công:', result);
-                
+
                 // Chuyển hướng đến trang chính
-                window.location.href = 'http://127.0.0.1:5500/front-end/home.html';
+                window.location.href = 'http://127.0.0.1:5500/home.html';
             } catch (error) {
                 console.error('Lỗi đăng nhập:', error);
                 alert(error.message || 'Đã có lỗi xảy ra. Vui lòng thử lại.');
