--- a/messenger/mess.html
+++ b/messenger/mess.html
@@ -11,6 +11,90 @@
 </head>
 
 <body>
+     <header class="header">
+        <div class="header-left">
+            <a href="../home.html"><img src="../img/logo.png" alt="Facebook Logo" class="logo"></a>
+            <input type="text" placeholder="Tìm kiếm trên Facebook">
+        </div>
+        <div class="header-center">
+            <button class="nav-icon active">
+                <a href="../home.html"><img src="../img/home.png" alt="Home"></a>
+            </button>
+            <button class="nav-icon">
+                <img src="../img/flag.png" alt="Flag">
+            </button>
+            <button class="nav-icon">
+                <img src="../img/watch.png" alt="Watch">
+            </button>
+            <button class="nav-icon">
+                <a href="../marketplace/market.html">
+                    <img src="../img/marketplace.png" alt="Marketplace">
+                </a>
+
+            </button>
+            <a href="../Group/group.html">
+                <button id="nav-group" class="nav-icon">
+                    <img src="../img/group.png" alt="Group">
+                </button>
+            </a>
+        </div>
+        <div class="header-right">
+            <button class="user-icon">
+                <img src="../img/home_menu.png" alt="Menu">
+            </button>
+            <button class="user-icon">
+                <a href="../messenger/mess.html">
+                    <img src="../img/messenger.png" alt="Messenger">
+                </a>
+
+            </button>
+            <button class="user-icon">
+                <img src="../img/notification.png" alt="Notifications">
+            </button>
+            <button class="user-icon" id="profile-icon">
+                <img src="../img/profile.png" alt="Profile">
+            </button>
+            <!-- Dropdown Menu -->
+            <div class="profile-dropdown" id="profile-dropdown">
+                <div class="dropdown-header">
+                    <img src="../img/profile.png" alt="Profile">
+                    <span>Lương Tri Tuệ</span>
+                </div>
+                <div class="dropdown-item">
+                    <span class="icon">👤</span>
+                    <span>Xem tất cả trang cá nhân</span>
+                </div>
+                <div class="dropdown-item">
+                    <span class="icon">⚙️</span>
+                    <span>Cài đặt và quyền riêng tư</span>
+                    <span class="arrow">></span>
+                </div>
+                <div class="dropdown-item">
+                    <span class="icon">❓</span>
+                    <span>Trợ giúp và hỗ trợ</span>
+                    <span class="arrow">></span>
+                </div>
+                <div class="dropdown-item">
+                    <span class="icon">🌙</span>
+                    <span>Màn hình & trợ năng</span>
+                    <span class="arrow">></span>
+                </div>
+                <div class="dropdown-item">
+                    <span class="icon">💬</span>
+                    <span>Đóng góp ý kiến</span>
+                </div>
+                <div class="dropdown-item">
+                    <span class="icon">🚪</span>
+                    <span><a href="../facebook-clone-fe/sign_in.html">Đăng xuất</a></span>
+                </div>
+                <div class="dropdown-footer">
+                    <p>Quyền riêng tư • Điều khoản • Quảng cáo • Lựa chọn quảng cáo • Cookie • Xem thêm • Meta © 2025
+                    </p>
+                    <p>Phiên bản mới</p>
+                </div>
+            </div>
+        </div>
+    </header>
     <div class="container">
         <div class="sidebar">
             <input type="text" id="search-input" placeholder="Search..." />
