update ui banbe

--- a/Banbe/TatCaBanBe.html
+++ b/Banbe/TatCaBanBe.html
@@ -183,12 +183,8 @@
         <div class="sidebar">
             <h2>Bạn bè</h2>
             <ul>
-                <li><i>🏠</i> Trang chủ</li>
-                <li><i>👥</i> Lời mời kết bạn</li>
-                <li><i>💡</i> Gợi ý</li>
-                <li class="active"><i>👤</i> Tất cả bạn bè</li>
-                <li><i>🎂</i> Sinh nhật</li>
-                <li><i>📋</i> Danh sách tùy chỉnh</li>
+                <li><a href="./banbe.html">👥 Lời mời kết bạn</a></li>
+                <li class="active"><a href="./TatCaBanBe.html">👤 Tất cả bạn bè</a></li>
             </ul>
         </div>
 
