--- a/Banbe/banbe.html
+++ b/Banbe/banbe.html
@@ -101,12 +101,8 @@
         <div class="sidebar">
             <h2>Bạn bè</h2>
             <ul>
-                <li><i>🏠</i> Trang chủ</li>
-                <li><i>👥</i> Lời mời kết bạn</li>
-                <li><i>💡</i> Gợi ý</li>
-                <li><a href="./TatCaBanBe.html"><i>👤</i> Tất cả bạn bè</a></li>
-                <li><i>🎂</i> Sinh nhật</li>
-                <li><i>📋</i> Danh sách tùy chỉnh</li>
+                <li><a href="./banbe.html" class="active">👥 Lời mời kết bạn</a></li>
+                <li><a href="./TatCaBanBe.html">👤 Tất cả bạn bè</a></li>
             </ul>
         </div>
 
