update ui banbe

--- a/marketplace/taobainiemyet.html
+++ b/marketplace/taobainiemyet.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tạo bài niêm yết mới</title>
     <link rel="stylesheet" href="taobainiemyet.css">
 </head>
+
 <body>
     <div class="container">
         <!-- Header từ test.html -->
         <header class="header">
             <div class="header-left">
-                <a href = "../test.html"><img src="../img/logo.png" alt="Facebook Logo" class="logo"></a>
+                <a href="../home.html"><img src="../img/logo.png" alt="Facebook Logo" class="logo"></a>
                 <input type="text" placeholder="Tìm kiếm trên Facebook">
             </div>
-            <div class="header-center">         
+            <div class="header-center">
                 <button class="nav-icon active">
-                     <a href = "../test.html"><img src="../img/home.png" alt="Home"></a>
+                    <a href="../home.html"><img src="../img/home.png" alt="Home"></a>
                 </button>
                 <button class="nav-icon">
                     <img src="../img/flag.png" alt="Flag">
@@ -29,11 +31,11 @@
                         <img src="../img/marketplace.png" alt="Marketplace">
                     </a>
                 </button>
-                <a href = "../Group/group.html">
-                     <button id="nav-group" class="nav-icon">
-                    <img src="../img/group.png" alt="Group">
-                </button>
-               </a>
+                <a href="../Group/group.html">
+                    <button id="nav-group" class="nav-icon">
+                        <img src="../img/group.png" alt="Group">
+                    </button>
+                </a>
             </div>
             <div class="header-right">
                 <button class="user-icon">
@@ -86,7 +88,8 @@
                         <span><a href="../facebook-clone-fe/sign_in.html">Đăng xuất</a></span>
                     </div>
                     <div class="dropdown-footer">
-                        <p>Quyền riêng tư • Điều khoản • Quảng cáo • Lựa chọn quảng cáo • Cookie • Xem thêm • Meta © 2025</p>
+                        <p>Quyền riêng tư • Điều khoản • Quảng cáo • Lựa chọn quảng cáo • Cookie • Xem thêm • Meta ©
+                            2025</p>
                         <p>Phiên bản mới</p>
                     </div>
                 </div>
@@ -99,7 +102,7 @@
                 <h2>Tạo bài niêm yết mới</h2>
                 <ul>
                     <li class="active">Chọn loại bài niêm yết</li>
-                    <a href = "banhang.html">
+                    <a href="banhang.html">
                         <li>Bài niêm yết của bạn</li>
                     </a>
                     <li>Trợ giúp người bán</li>
@@ -148,4 +151,5 @@
         });
     </script>
 </body>
+
 </html>
